# lib/db/src/schema/users.ts
@@ -19,6 +19,11 @@ export const usersTable = pgTable("users", {
   status: text("status").notNull().default("active"),
   dob: timestamp("dob", { withTimezone: true }),
   address: text("address"),
+  addressLine2: text("address_line_2"),
+  city: text("city"),
+  state: text("state"),
+  zipCode: text("zip_code"),
+  country: text("country"),
   gender: text("gender"),
   maritalStatus: text("marital_status"),
   nationality: text("nationality"),
